--- a/.env.heroku
+++ b/.env.heroku
@@ -1,8 +1,10 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=net-tv-station
+APP_ENV=production
 APP_KEY=base64:QrExlcyQIHfkPdsklpN8NBTeEysISDXmRqkDCi0OGMM=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://net-tv-station.herokuapp.com/
+
+CLEARDB_DATABASE_URL: mysql://bed9168d2fc3c2:1ae58436@us-cdbr-east-03.cleardb.com/heroku_235a5270bf55a64?reconnect=true
 
 LOG_CHANNEL=stack
 
