--- a/.env.heroku
+++ b/.env.heroku
@@ -4,16 +4,14 @@ APP_KEY=base64:QrExlcyQIHfkPdsklpN8NBTeEysISDXmRqkDCi0OGMM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-CLEARDB_DATABASE_URL: mysql://bed9168d2fc3c2:1ae58436@us-cdbr-east-03.cleardb.com/heroku_235a5270bf55a64?reconnect=true
-
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=station
+DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=q1w2e3r4
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
