--- a/.env.heroku
+++ b/.env.heroku
@@ -3,15 +3,15 @@ APP_ENV=local
 APP_KEY=base64:QrExlcyQIHfkPdsklpN8NBTeEysISDXmRqkDCi0OGMM=
 APP_DEBUG=true
 APP_URL=http://localhost
-
 LOG_CHANNEL=stack
+CLEARDB_DATABASE_URL: mysql://bed9168d2fc3c2:1ae58436@us-cdbr-east-03.cleardb.com/heroku_235a5270bf55a64?reconnect=true
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-east-03.cleardb.com
 DB_PORT=3306
-DB_DATABASE=station
-DB_USERNAME=root
-DB_PASSWORD=q1w2e3r4
+DB_DATABASE=heroku_235a5270bf55a64
+DB_USERNAME=bed9168d2fc3c2
+DB_PASSWORD=1ae58436
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
