--- a/.env.heroku
+++ b/.env.heroku
@@ -4,6 +4,8 @@ APP_KEY=base64:QrExlcyQIHfkPdsklpN8NBTeEysISDXmRqkDCi0OGMM=
 APP_DEBUG=true
 APP_URL=http://localhost
 LOG_CHANNEL=stack
+CLEARDB_DATABASE_URL: mysql://bed9168d2fc3c2:1ae58436@us-cdbr-east-03.cleardb.com/heroku_235a5270bf55a64?reconnect=true
+
 
 DB_CONNECTION=mysql
 DB_HOST=us-cdbr-east-03.cleardb.com
