--- a/.env.heroku
+++ b/.env.heroku
@@ -7,11 +7,11 @@ LOG_CHANNEL=stack
 
 
 DB_CONNECTION=mysql
-DB_HOST=us-cdbr-east-03.cleardb.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=heroku_235a5270bf55a64
-DB_USERNAME=bed9168d2fc3c2
-DB_PASSWORD=1ae58436
+DB_DATABASE=station
+DB_USERNAME=root
+DB_PASSWORD=q1w2e3r4
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
