--- a/.env.heroku
+++ b/.env.heroku
@@ -5,13 +5,12 @@ APP_DEBUG=true
 APP_URL=http://localhost
 LOG_CHANNEL=stack
 
-
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-east-03.cleardb.com
 DB_PORT=3306
-DB_DATABASE=station
-DB_USERNAME=root
-DB_PASSWORD=q1w2e3r4
+DB_DATABASE=heroku_235a5270bf55a64
+DB_USERNAME=bed9168d2fc3c2
+DB_PASSWORD=1ae58436
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
