--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "composer-plugin-api": "^1.0",
         "encore/laravel-admin": "^1.8",
         "fideloper/proxy": "^4.0",
+        "laravel-admin-ext/log-viewer": "^1.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0"
     },
